--- a/workcase1/workcase.html
+++ b/workcase1/workcase.html
@@ -116,7 +116,7 @@ Git є особливим (і в значній мірі обов’язкови
             <img src = "img/how_works.jpg" id="how_works">
         <p class="txt">Тепер, коли у вас є більш чітке уявлення про те, що таке git, прийшов час покопатися глибше і забруднити руки.
 
-В даному уроці ми припускаємо, що ви використовуєте командний рядок для взаємодії з git. Звичайно, для цього є і git-клієнти з графічним інтерфейсом (і Github навіть дозволяє вам робити практично все через свій веб-інтерфейс), але тут ми це розглядати не будемо.Основи роботи з терміналом або командним рядком <a href="https://sebweo.com/yak-vikoristovuvati-terminal-pri-veb-rozrobtsi-osnovi/">описані тут.</a></p>
+В даному уроці ми припускаємо, що ви використовуєте командний рядок для взаємодії з git. Звичайно, для цього є і git-клієнти з графічним інтерфейсом (і Github навіть дозволяє вам робити практично все через свій веб-інтерфейс), але тут ми це розглядати не будемо.Основи роботи з терміналом або командним рядком <a href="https://sebweo.com/yak-vikoristovuvati-terminal-pri-veb-rozrobtsi-osnovi/" target="_blank">описані тут.</a></p>
         
         </div>
         
@@ -126,7 +126,7 @@ Git є особливим (і в значній мірі обов’язкови
 
 Для Linux відкрийте термінал і введіть команду sudo apt-get install git-all (якщо ви перебуваєте в Ubuntu).
 
-У Windows все просто. Ви <a href="завантажуєте інсталятор">завантажуєте інсталятор</a> і запускаєте його.
+У Windows все просто. Ви <a href="https://git-scm.com/download/win" target="_blank">завантажуєте інсталятор</a> і запускаєте його.
 
 На Mac вам просто потрібно відкрити термінал і набрати git. Якщо git не встановлено, ви побачите пропозицію встановити його. Натисніть кнопку Встановити, і все готово.
 
